--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,7 @@
     "plugin:react/jsx-runtime",
     "plugin:react-hooks/recommended"
   ],
-  "ignorePatterns": ["dist", ".eslintrc"],
+  "ignorePatterns": ["dist", ".eslintrc", "vite.config.js"],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
