--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cypress": "^13.2.0",
     "eslint": "^8.45.0",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-cypress": "^2.15.1",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
