--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,6 @@
 {
   "root": true,
-  "env": { "browser": true, "es2020": true },
+  "env": { "browser": true, "es2020": true, "cypress/globals": true },
   "extends": [
     "eslint:recommended",
     "plugin:react/recommended",
@@ -12,7 +12,7 @@
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": ["react", "react-hooks"],
+  "plugins": ["cypress", "react", "react-hooks"],
   "settings": {
     "react": {
       "version": "16"
