--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "custom-tours",
   "version": "0.1.0",
   "description": "![Art Institute of Chicago](https://raw.githubusercontent.com/Art-Institute-of-Chicago/template/master/aic-logo.gif)",
-  "main": "dist/assets/CustomTourBuilder.js",
+  "main": "dist/CustomTourBuilder.js",
   "files": [
-    "dist/assets/CustomTourBuilder.js"
+    "dist/CustomTourBuilder.js"
   ],
   "scripts": {
     "build": "vite build",
@@ -17,7 +17,7 @@
     "test": "run-p -r dev cypress",
     "test:gui": "run-p -r dev cypress:gui"
   },
-  "dependencies": {
+  "peerDependencies": {
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
   },
@@ -34,6 +34,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.0",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
     "vite": "^4.4.5"
   },
   "license": "GNU Affero General Public License v3.0"
