--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "test": "cypress run --component --port=3000",
     "test:gui": "cypress open --component --port=3000"
   },
+  "dependencies": {
+    "prop-types": "^15.8.1"
+  },
   "peerDependencies": {
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
@@ -32,7 +35,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.0",
-    "prop-types": "^15.8.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "vite": "^4.4.5"
