--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ node_modules
 cypress/downloads
 cypress/screenshots
 cypress/videos
+
+# Ignore all dist files except for the CustomTourBuilder
+dist/*
+!dist/CustomTourBuilder.js
