--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "test:gui": "cypress open --component --port=3000"
   },
   "dependencies": {
+    "classnames": "^2.3.2",
     "prop-types": "^15.8.1"
   },
   "peerDependencies": {
