Full rename to My Museum Tour [WEB-2755]
* Changed all files, variables, and methods to reflect new name
* Ensure all tests pass
* Rebuilt the JS

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,6 @@ cypress/downloads
 cypress/screenshots
 cypress/videos
 
-# Ignore all dist files except for the CustomTourBuilder
+# Ignore all dist files except for the MyMuseumTourBuilder
 dist/*
-!dist/CustomTourBuilder.js
+!dist/MyMuseumTourBuilder.js
